--- a/data-structures/assignemt/style.css
+++ b/data-structures/assignemt/style.css
@@ -14,36 +14,13 @@ h1{
     text-align: center;
     margin-bottom: 25px;
 }
-
-#yourName{
-    background-color: rgb(17, 227, 146);
-    border: 4px solid #222222;
-    width: 700px;
-    margin-top: 50px;
-    height: 150px;
-    padding: 30px;
-}
-
-h5{
-    font-size: 15px;
-    margin-top: 0px;
-    text-align: center;
-    margin-bottom: 20px;
-}
-.second{
-    font-size: 18px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: rgb(190, 26, 193);
-    margin-bottom: 10px;
-}
-
-#buttonIn{
+#button{
     height: 40px;
     width: 140px;  
    
 }
-#textIn{
-    height: 50px;
-    width: 400px;
+#text{
+    height: 150px;
+    width: 600px;
     vertical-align: middle;
 }
